--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,8 +1,9 @@
 <nav>
     <%- include("logo") %>
     <div class="nav-options">
-        <button class="signup">Cadastrar-se</button>
-        <p>|</p>
+        <p class="pt">Português(BR) - BRL</p>
+        <button class="signup">Sign Up</button>
+        <p class="separador">|</p>
         <img src="/img/login.png" alt="Logar">
         <img src="/img/carrinho.png" alt="Carrinho">
     </div>
