--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,22 @@
     <header>
         <%- include("./includes/header")  %> 
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="container">
+            <img src="/img/farcry-banner.jpg" alt="FarCry6 ">
+            <div class="receber-emails">
+                <h2>Receba novidades e promoções</h2>
+                <input type="text" class="footer-nome" placeholder="Seu nome">
+                <input type="text" placeholder="Seu e-mail">
+                <button class="footer-enviar">
+                    OK
+                </button>
+            </div>
+        </div>
+        
+    </footer>
 </body>
 </html>
