--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: black;
     padding: 0;
     margin: 0;
     font-family: 'Ropa Sans', sans-serif;
 }
 
+/*********** Header ***********/
 nav {
     width: 100%;
     height: 90px;
@@ -23,17 +23,30 @@ nav {
 }
 
 .signup{
-    background: transparent;
+    background-color: #35c910;
     margin-right: 5px;
-    color: white;
+    color: black;
     font-size: 16px;
-    border: none;
+    border: solid #35c910;
+    border-radius: 11px;
+    border-width: thin;
 }
 
-header nav p{
+.signup:hover {
+    background-color: #1e7209d7;
+    color: white;
+    border-color: #1e7209d8;
+}
+
+header nav p.pt{
+    margin-right: 30px;
+    color: #4e4e4eaf;
+}
+
+header nav p.separador{
     color: #35C910;
     font-size: 34px;
-    opacity: 0.2;
+    opacity: 0.5;
     height: 45px;
 }
 
@@ -68,4 +81,50 @@ div.menu-bar ul li a:hover {
     box-shadow: 0 0 10px rgb(0, 0, 0), inset 0 0 1px rgba(0, 0, 0, 0.877);
     background: rgba(34, 34, 34, 0.993);
     color: #35C910
+}
+
+/*********** Footer ***********/
+footer img {
+    border-top: solid #35C910;
+    border-width: thin;
+    padding-top: 20px;
+    margin-top: 30px;
+    width: 100%;
+    height: 17vh;
+}
+
+footer div.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.receber-emails {
+    background-color: rgba(87, 87, 87, 0.37);
+}
+
+.receber-emails h2 {
+    color: white;
+    margin-left: 11%;
+}
+
+.receber-emails input.footer-nome {
+    margin-left: 11%;
+}
+
+.receber-emails input {
+    height: 40px;
+    width: 10vw;
+    margin-bottom: 20px;
+    font-size: large;
+    border: none;
+    border-radius: 4px;
+}
+
+.footer-enviar{
+    height: 42px;
+    width: 4vw;
+    background-color: #35C910;
+    border: none;
+    border-radius: 4px;
+    font-size: large;
 }
