--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,18 +17,7 @@
 
     </main>
     <footer>
-        <div class="container">
-            <img src="/img/farcry-banner.jpg" alt="FarCry6 ">
-            <div class="receber-emails">
-                <h2>Receba novidades e promoções</h2>
-                <input type="text" class="footer-nome" placeholder="Seu nome">
-                <input type="text" placeholder="Seu e-mail">
-                <button class="footer-enviar">
-                    OK
-                </button>
-            </div>
-        </div>
-        
+        <%- include("./includes/footer") %> 
     </footer>
 </body>
 </html>
