Adicionando estrutura do carrossel e ajustando responsividade do css

--- a/public/stylesheets/logo.css
+++ b/public/stylesheets/logo.css
@@ -4,7 +4,7 @@
     color: transparent;
     font-family: 'Cambay', sans-serif;
     font-style: italic;
-    font-size: 30px;
+    font-size: 3.5vh;
     font-weight: 700;
     letter-spacing: -0.02em;
     line-height: 1.03em;
