subindo alteração da parte views/footer, modificado logo

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -9,7 +9,7 @@
         </button>
     </div>
     <div class="container2">
-        <img src="/img/logo-setupgamer.png" class="logo-footer" alt="SetupGamer">
+        <img src="/img/logo-setupgamer.gif" class="logo-footer" alt="SetupGamer">
         <div class="footer-info">
             <ul class="Institucional">
                 <h3>Institucional</h3>
