--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,7 +10,7 @@
 
 .carousel .carousel__item img {
     width: 100%;
-    height: 45vh;
+    height: 40vh;
 }
 
 .carousel .carousel__item--visible {
@@ -35,7 +35,7 @@
     width: 40px;
     height: 40px;
     color: #FFF;
-    background-color: #242424;
+    background-color: rgba(87, 87, 87, 0.719);
 }
 
 .carousel .carousel__actions button[data-js="carousel__button--prev"] {
