--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ nav {
     border: solid #35c910;
     border-radius: 11px;
     border-width: thin;
+    cursor: pointer;
 }
 
 .signup:hover, .footer-enviar:hover {
@@ -55,6 +56,7 @@ header nav img {
     height: 3vh;
     margin-left: 5px;
     position: relative;
+    cursor: pointer;
 }
   
 div.menu-bar ul {
@@ -132,6 +134,7 @@ footer div.container {
     border: none;
     border-radius: 4px;
     font-size: 1.1vw;
+    cursor: pointer;
 }
 
 footer img.logo-footer {
