--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,12 +40,12 @@
         </div>
       </section>
 
+      <!--Procurar-->
       <form action="">
         <div class="search">
           <input type="text" placeholder="O que você procura?">
           <button type="submit"><img src="/img/lupa.png" alt="Buscar"></button>
         </div>
-        
       </form>
 
       <!--Categorias-->
@@ -56,8 +56,8 @@
             <div class="face face1">
               <div class="content">
                 <span class="stars"></span>
-                <h2 class="card-1">Novidades</h2>
-                <p class="card-1">Encontre aqui nossos produtos de lançamentos.</p>
+                <h2 class="card-1">Procurando algo novo?</h2>
+                <p class="card-1">Venha dar uma conferida em nossos produtos de lançamentos.</p>
               </div>
             </div>
             <div class="face face2">
@@ -69,8 +69,8 @@
             <div class="face face1">
               <div class="content">
                 <span class="stars"></span>
-                <h2 class="card-2">Mais comprados</h2>
-                <p class="card-2">Python is an interpreted, high-level and general-purpose programming language.</p>
+                <h2 class="card-2">Quer saber quais os produtos que a galera mais compra?</h2>
+                <p class="card-2">Aqui você encontrará a lista dos mais vendidos pela SetupGamer.</p>
               </div>
             </div>
             <div class="face face2">
@@ -78,37 +78,40 @@
             </div>
           </div>
 
-      </div>
-      <div class="container2">
+        </div>
+        <div class="container2">
 
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <span class="stars"></span>
-              <h2 class="card-3">Acessórios</h2>
-              <p class="card-3">C# is a general-purpose, multi-paradigm programming language encompassing static typing, strong typing, lexically scoped and component-oriented programming disciplines.</p>
+          <div class="card">
+            <div class="face face1">
+              <div class="content">
+                <span class="stars"></span>
+                <h2 class="card-3">Quer deixar seu Setup ainda mais elegante e profissional?</h2>
+                <p class="card-3">Confira os acessórios que a SetupGamer tem para você.</p>
+              </div>
+            </div>
+            <div class="face face2">
+              <h2>Acessórios</h2>
             </div>
           </div>
-          <div class="face face2">
-            <h2>Acessórios</h2>
-          </div>
-        </div>
 
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <span class="stars"></span>
-              <h2 class="card-4">Economicos</h2>
-              <p class="card-4">C# is a general-purpose, multi-paradigm programming language encompassing static typing, strong typing, lexically scoped and component-oriented programming disciplines.</p>
+          <div class="card">
+            <div class="face face1">
+              <div class="content">
+                <span class="stars"></span>
+                <h2 class="card-4">Querendo encontrar alguma máquina mais em conta?</h2>
+                <p class="card-4">Conheça nossos Pc´s mais baratos.</p>
+              </div>
+            </div>
+            <div class="face face2">
+              <h2>Economicos</h2>
             </div>
           </div>
-          <div class="face face2">
-            <h2>Economicos</h2>
-          </div>
-        </div>
 
-      </div>
+        </div>
       </section>
+
+      <!--Carrossel de produtos-->
+      
     </main>
     <footer>
         <%- include("./includes/footer") %> 
