--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/background.css">
     <link rel="stylesheet" href="/stylesheets/logo.css">
     <link rel="stylesheet" href="/stylesheets/index.css">
+    <script defer src="/scripts/carousel.js"></script>
     <title>Página inicial</title>
 </head>
 <body>
