--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,13 @@
 body {
+    background-image: linear-gradient(
+        180deg,
+        #242424 3%,
+        black 90%,
+        #35C910 100%
+    );
     padding: 0;
     margin: 0;
+    width: 100%;
     font-family: 'Ropa Sans', sans-serif;
 }
 
@@ -40,7 +47,7 @@ nav {
 }
 
 header nav p.pt{
-    margin-right: 30px;
+    margin-right: 2vw;
     font-size: 1.6vh;
     color: #4e4e4eaf;
 }
@@ -63,6 +70,7 @@ div.menu-bar ul {
     display: flex;
     justify-content: space-evenly;
     margin: 0;
+    padding: 0;
     background-color: rgba(87, 87, 87, 0.719);
     opacity: 0.4;
     box-shadow: 0px 4px 10px rgb(0, 0, 0);
@@ -73,7 +81,7 @@ div.menu-bar ul li {
 }
   
 div.menu-bar ul li a {
-    padding: 18px;
+    padding: 1vw;
     color: white;
     font-size: 2vh;
     text-decoration: none;
@@ -172,4 +180,11 @@ footer div.footer-info li{
 footer h3 {
     margin-top: 0;
     margin-bottom: 4vh;
+}
+
+/*********** media ***********/
+@media (width: 530px) {
+    footer img.logo-footer {
+        width: 8rem;
+    }
 }
