Criando section midias sociais

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/stylesheets/owl/owl.theme.default.min.css" />
 
     <!--JS-->
+    <script defer src="https://kit.fontawesome.com/6837938f61.js" crossorigin="anonymous"></script>
     <script defer src="/scripts/carousel.js"></script>
     <script defer src="/scripts/owl/jquery.min.js"></script>
     <script defer src="/scripts/owl/owl.carousel.min.js"></script>
@@ -167,22 +168,31 @@
         </div>
       </section>
 
-      <!--Cupom-->
-      <section class="cupom">
-        <button><img src="https://i.postimg.cc/KzQFzHFx/banner-desconto.jpg" alt="Desconto"></button>
+      <!---Video-->
+      <section class="video">
+        <h2>Veja como nós preparamos o seu PC</h2>
+        <div class="container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/RNQvBeh1G2o"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
       </section>
 
-      <!---Video-->
-      <section class="container1">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/RNQvBeh1G2o"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+      <!---Midias sociais-->
+      <section class="midias-sociais">
+        <h2>Nos siga nas redes sociais</h2>
+        <div>
+          <a href="#"><i class="fab fa-facebook"></i></i></a>
+          <a href="#"><i class="fab fa-twitter-square"></i></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-github"></i></i></a>
+        </div>
       </section>
     </main>
     <footer><%- include("./includes/footer") %></footer>
