Criando página monte seu pc

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -26,7 +26,7 @@
             <a href="#">Peças</a>
         </li>
         <li>
-            <a href="#">Monte seu pc</a>
+            <a href="../monteSeuPc">Monte seu pc</a>
         </li>
     </ul>
 </div>
