--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -197,6 +197,8 @@
 .carrossel-filmes .item {
     height: 100%;
     width: 100%;
+    margin-top: 3vh;
+    margin-bottom: 1vh;
     box-shadow: 0px 0px 10px 0px black;
 }
 
