--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,1 +1,85 @@
-Olá
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/logo.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
+    <link rel="stylesheet" href="/stylesheets/cadastro.css" />
+
+    <script defer src="https://kit.fontawesome.com/6837938f61.js" crossorigin="anonymous"></script>
+
+    <title>Document</title>
+</head>
+<body>
+    <header><%- include("./includes/header") %></header>
+
+    <h1>Cadastro</h1>
+    
+    <section class="containerl">
+
+        <div class="formulario">
+        
+            <div class="opcao">
+
+                <button>Pessoa Fisica</button>
+                <button>Pessoa Juridica</button>
+
+            </div>
+
+                <h2>Insira seus dados</h2>
+
+            <form action="">
+
+                <div class="caixa1">
+
+                    <label for="nome"></label>
+                    <input type="text" id="nome" name="nome" placeholder="Nome">
+            
+                    <label for="sobrenome"></label>
+                    <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
+
+                </div>
+
+                    <label for="email"></label>
+                    <input type="text" id="email" name="email" placeholder="Email" required>
+
+                <div class="caixa2">
+
+                    <label for="dataDeNascimento"></label>
+                    <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento">
+
+                    <label for="genero"></label>
+                    <input type="text" id="genero" name="genero" placeholder="Gênero">
+
+                </div>   
+            
+                <div class="caixa3">
+                
+                    <label for="cpf"></label>
+                    <input type="text" id="cpf" name="cpf" placeholder="CPF">
+
+                    <label for="telefone"></label>
+                    <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+
+                </div>
+
+                    <label for="senha"></label>
+                    <input type="text" id="senha" name="senha" placeholder="Senha">
+
+            </form>
+        
+        </div>
+        
+
+    </section>
+    
+
+
+
+    <footer><%- include("./includes/footer") %></footer>
+</body>
+</html>
